--- a/pages/show/event/event.wxss
+++ b/pages/show/event/event.wxss
@@ -1,28 +1,40 @@
 /* pages/show/event/event.wxss */
-.container {
+.container_1 {
   padding: 20rpx;
 }
 
 .input {
-  width: 100%;
-  height: 80rpx;
+  position: absolute;
+  width: 250px;
+  height: 20px;
+  margin-top: -38px;
+  margin-left: 40px;
   padding: 10rpx;
-  border: 1rpx solid #ccc;
+  border: 1rpx solid rgba(220, 220, 220, 0.5);
   border-radius: 4rpx;
-  margin-bottom: 20rpx;
-}
-
-.submit{
-  width: 100%;
-  height: 80rpx;
-  background-color: #007AFF;
-  color: #fff;
-  border-radius: 100px;
-  box-shadow: 0 10rpx 10rpx rgba(0, 0, 0, 0.16);
 }
 
 .result {
   margin-top: 20rpx;
+}
+
+.container_2 {
+  margin-top: 0px;
+  padding: 20rpx;
+}
+
+.upload_title {
+  width: 200rpx;
+  height: 80rpx;
+  border-radius: 100px;
+  color: #ccc;
+}
+
+.upload_icon{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  margin-top: 2px;
 }
 
 .container {
@@ -47,13 +59,51 @@
   margin-bottom: 10rpx;
 }
 
-.upload-button {
-  width: 200rpx;
-  height: 80rpx;
-  line-height: 80rpx;
-  text-align: center;
-  background-color: #007AFF;
-  color: #fff;
+.image_delete{
+  position: absolute;
+  margin-top: -80px;
+  width: 20px;
+}
+
+.image_delete_icon{
+  width: 10px;
+  height: 5px;
+}
+
+.container_3 {
+  position: absolute;
+  padding: 20rpx;
+}
+
+.input_text {
+  width: 290px;
+  height: 200rpx;
+  padding: 10rpx;
+  border: 1rpx solid rgba(220, 220, 220, 0.5);
   border-radius: 4rpx;
-  margin-top: 20rpx;
+  margin-bottom: 20rpx;
+}
+
+.container_4 {
+  position: absolute;
+  margin-top: 150px;
+  padding: 20rpx;
+}
+
+.container_5 {
+  position: absolute;
+  margin-left: 60px;
+  padding: 20rpx;
+}
+
+.submit{
+  position: absolute;
+  margin-left: 100px;
+  margin-top: 250px;
+  width: 100%;
+  height: 80rpx;
+  background-color: #4095E5;
+  color: #fff;
+  border-radius: 100px;
+  box-shadow: 0 10rpx 10rpx rgba(0, 0, 0, 0.16);
 }
