--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -61,11 +61,11 @@ page {
   width: 30px;
   height: 20px;
   background: #f0f8ff;
-  border: 1rpx solid #0281fe;
+  border: 1rpx solid #4095E5;
   border-radius: 10rpx;
   font-size: 12px;
   text-align: center;
-  color: #0281fe;
+  color: #4095E5;
   line-height: 62rpx;
 }
 
@@ -136,7 +136,7 @@ page {
 .line {
   width: 100%;
   height: 3rpx;
-  background: rgba(223, 220, 220, 0.521);
+  background: rgba(220, 220, 220, 0.5);
   /* margin-left: 90rpx; */
 }
 
