--- a/pages/show/event/event.wxml
+++ b/pages/show/event/event.wxml
@@ -26,6 +26,16 @@
 
 <view class="container_4">
   <view class="upload_title">选择tag</view>
+  <view class="container_tag">
+    <view wx:for="{{tags}}" wx:key="index" data-index='{{index}}' class="tag {{tags[index].checked ? 'selected' : ''}}" bindtap="toggleTag">
+      <text class="tag-text">{{item.checked}}</text>
+    </view>
+    <view class="add-tag" bindtap="showInput">
+      <text class="add-icon">+</text>
+      <text class="add-text">tag</text>
+    </view>
+    <input wx:if="{{showInput}}" type="text" class="tag-input" bindblur="addTag" placeholder="请输入标签" />
+  </view>
 </view>
 
 <view class="container_5">
