--- a/pages/show/event/event.wxss
+++ b/pages/show/event/event.wxss
@@ -84,15 +84,111 @@
   margin-bottom: 20rpx;
 }
 
+.stateChoose {
+  width: 206rpx;
+  height: 62rpx;
+  background: #f0f8ff;
+  border: 1rpx solid #4095E5;
+  border-radius: 10rpx;
+  font-size: 28rpx;
+  font-weight: 400;
+  text-align: center;
+  color: #4095E5;
+  line-height: 62rpx;
+  margin-top: 46rpx;
+}
+ 
+.stateNotChoose {
+  width: 206rpx;
+  height: 62rpx;
+  background: #ffffff;
+  border: 1rpx solid #b3b3b3;
+  border-radius: 10rpx;
+  font-size: 28rpx;
+  font-weight: 400;
+  text-align: center;
+  color: #333333;
+  line-height: 62rpx;
+  margin-top: 46rpx;
+}
+
 .container_4 {
   position: absolute;
-  margin-top: 150px;
   padding: 20rpx;
+  margin-top: 140px;
+}
+
+.container_tag{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center; /* 标签垂直居中对齐 */
+  gap: 8px; /* 标签之间的间距 */
+}
+
+.tag {
+  height: 15px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  background: #f0f8ff;
+  border: 1rpx solid #4095E5;
+  border-radius: 10rpx;
+  font-size: 28rpx;
+  text-align: center;
+  color: #4095E5;
+  cursor: pointer;
+}
+
+.tag.selected {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.tag .tag-text {
+  margin-right: 4px;
+}
+
+.checkbox-container {
+  margin-left: 4px;
+}
+
+.add-tag {
+  display: flex;
+  height: 15px;
+  align-items: center;
+  padding: 4px 8px;
+  margin-right: 8px;
+  border-radius: 4px;
+  border: 1rpx solid #007bff65;
+  border-radius: 10rpx;
+  font-size: 28rpx;
+  text-align: center;
+  color: #007bff65;
+  cursor: pointer;
+}
+
+.add-tag .add-icon {
+  font-size: 16px;
+  margin-right: 4px;
+}
+
+.add-tag .add-text {
+  font-size: 14px;
+}
+
+.tag-input {
+  font-size: 16px;
+  width: 100px;
+  height: 15px;
+  margin-top: 8px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
 
 .container_5 {
   position: absolute;
   margin-left: 60px;
+  margin-top: 50px;
   padding: 20rpx;
 }
 
