--- a/pages/show/event/event.wxss
+++ b/pages/show/event/event.wxss
@@ -181,13 +181,13 @@
 }
 
 .tag-input {
-  font-size: 16px;
-  width: 100px;
-  height: 15px;
-  margin-top: 8px;
-  padding: 4px 8px;
+  margin-left: -70px;
+  font-size: 12px;
+  width: 60px;
   border-radius: 4px;
-  border: 1px solid #ccc;
+  border: 1px solid #007bff65;
+  color: #007bff65;
+  background-color: #fff;
 }
 
 .container_5 {
