--- a/frontend/pages/show/event/event.wxml
+++ b/frontend/pages/show/event/event.wxml
@@ -52,7 +52,9 @@
 </view>
 
 <view class="container_5 overall-outfit">
-  <button class="submit" bindtap="handleSubmit" style="position: absolute; left: 199rpx; top: 797rpx">提交</button>
+  <view id="button-box">
+      <button class="submit" bindtap="handleSubmit">提交</button>
+  </view>
 </view>
 
 </view>
