--- a/frontend/pages/show/event/event.wxss
+++ b/frontend/pages/show/event/event.wxss
@@ -88,7 +88,7 @@
 }  */
 
 .image-grid-item{
-  border: 1px solid #000;
+  border: 1px solid rgba(0, 0, 0, 0);
   width: 25vw;
   height:25vw; /*设置高度宽度相等*/
 
@@ -169,7 +169,8 @@
 }
 
 .tag .tag-text {
-  margin-right: 4px;
+  /* margin-bottom: 3px; */
+  font-size: 14px;
 }
 
 .checkbox-container {
@@ -203,23 +204,27 @@
 .tag-input {
   margin-left: -70px;
   font-size: 12px;
-  width: 60px;
+  width: 70px;
   border-radius: 4px;
   border: 1px solid #007bff65;
   color: #007bff65;
   background-color: #fff;
+  padding-left: 6px;
 }
 
 .container_5 {
   grid-area: "E";
+  width: 100%;
   justify-self: center;
   font-size: 14px;
 }
 
 .submit{
-  position: absolute;
-  margin-left: 100px;
-  margin-top: 250px;
+  position: relative;
+  left: 0px;
+  bottom: 15px;
+  /* margin-left: 100px; */
+  margin-top: 30px;
   width: 100%;
   height: 80rpx;
   background-color: #4095E5;
