feat(font): Implement parameters passing in plan pages

--- a/frontend/pages/plan/plan.wxml
+++ b/frontend/pages/plan/plan.wxml
@@ -1,17 +1,27 @@
 <!--pages/plan/plan.wxml-->
 <view class="container_todo">
-  <text class="todo-header">七天内的任务</text>
+  <text class="todo-header">七天内的待办</text>
+  <scroll-view class="scroll-view" scroll-y="true">
   <view class="todo-list">
-    <block wx:for="{{todoList}}" wx:key="index">
-      <view class="todo-item">{{item}}</view>
+    <block wx:for="{{todoList}}" wx:for-index="index" wx:key="index">
+      <view class="todo-item">
+        <checkbox value="{{item.completed}}" bindchange="toggleComplete" data-index="index"></checkbox>
+        <text class="{{item.completed ? 'completed' : ''}}">{{item}}</text>
+      </view>
+      <view class="line"></view>
     </block>
   </view>
+</scroll-view>
 </view>
 <view class="container_plan">
-  <text class="plan-header">计划列表</text>
+  <text class="plan-header">所有计划</text>
+  <scroll-view class="scroll-view" scroll-y="true">
   <view class="plan-list">
     <block wx:for="{{planList}}" wx:key="index">
       <view class="plan-item"  data-value='{{item}}' bindtap="goToTodoList">{{item}}</view>
+      <image class="image-arrow" src="/image/user/arrow.png"></image>
+      <view class="line"></view>
     </block>
   </view>
+</scroll-view>
 </view>
