--- a/frontend/pages/plan/todo/todo.wxml
+++ b/frontend/pages/plan/todo/todo.wxml
@@ -1,11 +1,14 @@
 <!--pages/plan/todo/todo.wxml-->
 <view class='container'>
+  <text class="plan-header">{{planValue}}</text>
   <view class="list">
     <block wx:for="{{todos}}" wx:for-index="index" wx:key="index">
       <view class="item">
         <checkbox value="{{item.completed}}" bindchange="toggleComplete" data-index="index"></checkbox>
         <text class="{{item.completed ? 'completed' : ''}}">{{item.title}}</text>
-        <text class="delete-btn" bindtap="deleteTodo" data-index="index">删除</text>
+        <view class="delete-btn" bindtap="deleteTodo" data-index="{{index}}">
+          <image src="/image/plan/trash.png" style="height: 3vh; width: 3vh;opacity: 0.3;"/>
+        </view>
       </view>
     </block>
   </view>
