perf(font): plan page compnent

--- a/frontend/pages/plan/plan.wxml
+++ b/frontend/pages/plan/plan.wxml
@@ -22,6 +22,12 @@
       <image class="image-arrow" src="/image/user/arrow.png"></image>
       <view class="line"></view>
     </block>
+    <view class="container_add">
+      <view class="add-plan" bindtap="showInput">
+        <text class="add-text">+计划</text>
+      </view>
+      <input wx:if="{{showInput}}" type="text" class="plan-input" bindblur="addPlan" placeholder="请添加计划"/>
+    </view>
   </view>
 </scroll-view>
 </view>
