--- a/frontend/pages/plan/plan.wxss
+++ b/frontend/pages/plan/plan.wxss
@@ -15,7 +15,7 @@
   height: 40vh; 
   width: 50vh;
   overflow-y: scroll; 
-  background-color: rgba(220, 220, 220, 0.1);
+  background-color: rgb(250, 250, 250);
   margin-top: 1vh;
   border-radius: 1vh;
 }
@@ -61,6 +61,21 @@
   height: 2vh;
   font-size: large;
   margin-bottom: 1vh;
+}
+
+.add-plan{
+  padding: 2vh;
+  height: 2vh;
+  color: rgba(200, 200, 200);
+}
+
+.plan-input{
+  position: relative;
+  margin-top: -4vh;
+  margin-left: 2vh;
+  height: 3vh;
+  background-color: rgb(250, 250, 250);
+  z-index: 1;
 }
 
 .line {
