--- a/frontend/pages/plan/todo/todo.wxml
+++ b/frontend/pages/plan/todo/todo.wxml
@@ -14,8 +14,7 @@
   </view>
   <view class="container_add">
     <view class="add-todo" bindtap="showInput">
-      <text class="add-icon">+</text>
-      <text class="add-text">待办</text>
+      <text class="add-text">+待办</text>
     </view>
     <input wx:if="{{showInput}}" type="text" class="todo-input" bindblur="addTodo" placeholder="请添加待办"/>
   </view>
