--- a/frontend/pages/show/data/data.wxml
+++ b/frontend/pages/show/data/data.wxml
@@ -1,5 +1,26 @@
 <!--pages/show/data/data.wxml-->
-<view class="container_1">
-  <view class="upload_title">身高</view>
-  <input style="width: 554rpx; display: block; box-sizing: border-box; left: 24rpx; position: absolute; height: 70rpx; top: 100rpx" class="input" bindinput="handleInput" placeholder="请输入" />
+<view id='main'>
+  <view id="overlay" bindtap="handleAddTag"></view>
+  <!-- 已有的数据填写框 -->
+  <view wx:for="{{loadedTags}}" wx:key="*this"> 
+    <view class="dataTag textCenter">  {{item}}： </view> 
+    <input class="dataBar" id="{{item}}" type="digit" placeholder="请输入" 	bindblur="handleAddData"/>
+  </view>
+  <!-- 数据添加按钮 -->
+  <view class='spacing' hidden="{{startAdd}}">
+      <button id="addBtn" bindtap="handleAddTag">添加标签</button>
+  </view>
+  <!-- 添加选项框 -->
+  <view id="select" hidden="{{!startAdd}}">
+    <view wx:for="{{unloadedTags}}" wx:key="*this"> 
+      <view id="{{item}}" class="selectItem" bindtap='handleAddTag'>  {{item}} </view>
+    </view> 
+    <input id="createBar" class="selectItem" type="text" placeholder="输入以创建新标签" 
+    value="{{waitClear}}" bindblur="handleAddTag"/>
+  </view>
+  <view style="height: 270px;"></view>
+  <!-- 提交按钮 -->
+  <view style="position: absolute; top: {{submitHeight}}px;" class='spacing textCenter'>
+  <button class="submit" type="submit" bindtap="handleSubmit">提交</button>
+  </view>
 </view>
