--- a/frontend/pages/show/data/data.wxss
+++ b/frontend/pages/show/data/data.wxss
@@ -1,29 +1,100 @@
 /* pages/show/data/data.wxss */
-.container_1 {
-  padding: 20rpx;
+
+#overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.dataTag {
+  position: relative;
+  left: 5%;
+  top: 50px;
+  width: 24%;
+  height: 40px;
+
+  color: gray;
+  text-align: right;
+}
+.dataBar {
+  position: relative;
+  left: 30%;
+  width: 60%;
+  height: 40px;
+  border: 2rpx solid rgba(220, 220, 220, 0.5);
+  border-radius: 4rpx;
+}
+
+.textCenter {
+  vertical-align: center;
+}
+
+.spacing {
+  margin-top: 40px;
+  width: 100%;
+  display: flex;    /*设置显示样式**/
+  vertical-align: center; /**垂直居中*/
+  justify-content: center; /**内容居中*/
+}
+
+#addBtn {
+  position: relative;
+  width: 30%;
+
+  background-color: #78b6f0;
+  box-shadow: 0 10rpx 10rpx rgba(0, 0, 0, 0.16);
+  color: #fff;
   font-size: 14px;
 }
 
-.input {
-  position: absolute;
-  width: 250px;
-  height: 20px;
-  margin-top: -38px;
-  margin-left: 40px;
-  padding: 10rpx;
-  border: 1rpx solid rgba(220, 220, 220, 0.5);
-  border-radius: 4rpx;
-}
-.container_tag{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center; /* 标签垂直居中对齐 */
-  gap: 8px; /* 标签之间的间距 */
+@keyframes fadein {
+  from {opacity: 0.2;}
+  to {opacity: 1;}
 }
 
-.upload_title {
-  width: 200rpx;
-  height: 80rpx;
-  border-radius: 100px;
-  color: #ccc;
+#select {
+  margin-top: 40px;
+  position: relative;
+  left: 25%;
+  width: 50%;
+  border: 2rpx solid rgba(100, 100, 100, 0.7);
+  border-radius: 5px;
+  background-color: rgba(220, 238, 255, 0.7);
+
+  animation-name: fadein;
+  animation-duration: 0.25s;
+  animation-timing-function: ease-in-out;
 }
+
+.selectItem {
+  text-align: center;
+
+  height: 28px;
+  width: calc(100% - 12px);
+  margin: 6px 6px 6px 6px;
+
+  border: 2rpx solid rgba(59, 59, 59, 0.7);
+  border-radius: 5px;
+  background-color: rgba(174, 213, 253, 0.7);
+  box-shadow: 5rpx 5rpx 5rpx rgba(0, 0, 0, 0.16);
+  
+  animation-name: fadein;
+  animation-duration: 0.25s;
+  animation-timing-function: ease-in-out;
+}
+
+.submit{
+  margin-bottom: 100px;
+  width: 100%;
+  height: 80rpx;
+
+  background-color: #4095E5;
+  color: #fff;
+
+  border-radius: 100px;
+  box-shadow: 0 10rpx 10rpx rgba(0, 0, 0, 0.16);
+  font-size: 14px;
+}
+
