--- a/frontend/pages/register/register.wxml
+++ b/frontend/pages/register/register.wxml
@@ -10,25 +10,12 @@
 
 <view class="container_2 overall-outfit">
   <view class="upload_title" bindtap="handleUpload">上传头像 </view>
-  <!-- <image class="upload_icon" src="/image/show/add.png"></image></view>
-  <scroll-view class="image-list" scroll-x="true">
-    <block wx:for="{{imageList}}" wx:key="index">
-      <view class="image-item">
-        <image src="{{item}}" mode="aspectFill"></image>
-        <view class="image_delete" bindtap="handleDelete" data-index="{{index}}">
-          <image src="/image/show/cross.png" style="height: 20px;"/>
-        </view>
-      </view>
-    </block>
-  </scroll-view> -->
+
       <view id="image-grid-container" style="{{imgGridStyle}}">
           <view wx:for="{{imageList}}" wx:key="index" class="image-grid-item" bindtap="changeImage" data-index="{{index}}">
               <image src="{{item}}" mode="aspectFill" data-index="{{index}}"></image> 
-              <view class="image_delete" catchtap="handleDelete" data-index="{{index}}">
-                  <image src="/image/show/cross.png" style="height: 20px;"/>
-              </view>
           </view>
-          <view class="image-grid-item add-image-butn" bindtap="chooseImage">+</view>
+          <view wx:if="{{firsttime_selected_img}}" class="image-grid-item add-image-butn" bindtap="chooseImage">+</view>
   </view>
 </view>
 
