--- a/frontend/pages/show/show.wxss
+++ b/frontend/pages/show/show.wxss
@@ -29,12 +29,17 @@
   background-color: rgba(0, 0, 0, 0);
 }
 
+.popup-container{
+  /*position: relative;*/
+  width: 100%;
+  height: 100%;
+}
+
 .popup {
   position: fixed;
   right: -40px;
   bottom: 70px;
-  margin-top: 145px;
-  margin-left: 90px;
+
   width: 210rpx;
   height: 270rpx;
   transform: translateX(-50%);
