--- a/frontend/pages/register/register.wxml
+++ b/frontend/pages/register/register.wxml
@@ -5,7 +5,7 @@
   <view id="title-box1">
     <view class="upload_title">昵称</view>
   </view>
-  <input style="width: 554rpx; display: block; box-sizing: border-box; left: 24rpx; position: absolute; height: 70rpx; top: 100rpx" class="input" bindinput="handleInputUsername" placeholder="请输入" />
+  <input style="width: 554rpx; right: 15rpx; position: relative; height: 50rpx;top:20rpx" class="input" bindinput="handleInputUsername" placeholder="请输入" />
 </view>
 
 <view class="container_2 overall-outfit">
@@ -20,9 +20,12 @@
 </view>
 
 <view class="container_3 overall-outfit">
-  <view class="upload_title">家庭口令</view>
-  <input style="width: 554rpx; display: {{visibility_input}}; box-sizing: border-box; left: 50rpx; position: relative; height: 70rpx; top:-5px" class="input" bindinput="handleInputFamilyId" placeholder="请输入" disabled='{{is_disabled}}' ></input>
-  <text style="width: 554rpx; display: {{visibility_text}}; box-sizing: border-box; left: 50rpx; position: relative; height: 60rpx; top:-5px" > {{familyId_text}}</text>
+  <view class="family">
+    <view class="upload_title">家庭口令</view>
+    <input style="width: 554rpx; display: {{visibility_input}}; box-sizing: border-box; left: -50rpx; position: relative; height: 70rpx; top:20rpx" class="input" bindinput="handleInputFamilyId" placeholder="请输入" disabled='{{is_disabled}}' ></input>
+    <text style="width: 40%; display: {{visibility_text}}; position: relative; height: 5vh;left: 30rpx;" > {{familyId_text}}</text>
+  </view>
+  
   <p class='create-familyId' bind:tap='create_familyId' style='display: {{visibility_create}}'>创建新家庭口令</p>
   <p class='cancel' style='display: {{visibility_cancel}};' bind:tap='cancel'>取消</p>
 </view>
