--- a/frontend/pages/user/family/family.wxml
+++ b/frontend/pages/user/family/family.wxml
@@ -1,13 +1,14 @@
 <!--pages/user/family/family.wxml-->
 
 <view class="family-list">
-  <block wx:for="{{familyMembers}}" wx:key="index">
-    <view class="view_image_text">
-      <image class="user_profile" src="{{item.profile}}" />
+  <block wx:for="{{blog_cards_list}}" wx:key="index">
+    <!-- <view class="view_image_text">
+      <image class="user_profile" src="{{item.imgSrc}}" />
       <text class="user_name">{{item.name}}</text>
       <text class="user_tag">{{item.tag}}</text>
       <text class="user_signature">{{item.signature}}</text>
-    </view>
+    </view> -->
+    <family-card name="{{item.name}}" label="{{item.label}}" signature="{{item.signature}}" imgSrc="{{item.imgSrc}}"></family-card>
   </block>
 </view>
 
