--- a/frontend/pages/plan/plan.wxss
+++ b/frontend/pages/plan/plan.wxss
@@ -9,13 +9,14 @@
 
 .todo-header {
   font-size: 4vh;
+  color: #4095E5;
 }
 
 .scroll-view {
   height: 40vh; 
   width: 50vh;
   overflow-y: scroll; 
-  background-color: rgb(250, 250, 250);
+  background-color: #4095e52c;
   margin-top: 1vh;
   border-radius: 1vh;
 }
@@ -47,6 +48,7 @@
 
 .plan-header {
   font-size: 4vh;
+  color: #4095E5;
 }
 
 .plan-list {
