--- a/frontend/pages/plan/plan.wxss
+++ b/frontend/pages/plan/plan.wxss
@@ -1,10 +1,11 @@
 /* pages/plan/plan.wxss */
 
 .container_todo{
-  width: 80vh;
+  position: relative;
+  left: 7.5%;
+  width: 80%;
   margin-bottom: 3vh;
-  margin-top: 2vh;
-  margin-left: 2vh;
+  margin-top: 3vh;
 }
 
 .todo-header {
@@ -13,7 +14,7 @@
 }
 
 .scroll-view {
-  height: 40vh; 
+  height: 35vh; 
   width: 50vh;
   overflow-y: scroll; 
   background-color: #4095e52c;
@@ -40,10 +41,35 @@
   text-decoration: line-through;
 }
 
+.btn-area{
+  width: 100%;
+  height: 5vh;
+  text-align: right;
+}
+
+.btn-area button{
+  margin-top: 1vh;
+  height: 4vh;
+  width: 5vh;
+
+  background: #f0f8ff;
+  border: 1rpx solid #4095E5;
+  border-radius: 10rpx;
+  font-size: 28rpx;
+  color: #4095E5;
+
+  display: flex;
+  float: right;
+  align-items: center;
+  justify-content: center;
+}
+
 .container_plan {
-  width: 80vh;
-  margin-top: 2vh;
-  margin-left: 2vh;
+  position: relative;
+  left: 7.5%;
+  width: 80%;
+  margin-bottom: 3vh;
+  margin-top: 3vh;
 }
 
 .plan-header {
